--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase": "^9.15.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
