--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
